k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taskflow-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: taskflow-backend
  template:
    metadata:
      labels:
        app: taskflow-backend
    spec:
      containers:
        - name: backend
          image: medaminemrad/taskflow-backend:latest
          ports:
            - containerPort: 5000
