k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: taskflow-backend-service
spec:
  type: ClusterIP
  selector:
    app: taskflow-backend
  ports:
    - port: 5000
      targetPort: 5000
