k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: taskflow-frontend-service
spec:
  type: NodePort
  selector:
    app: taskflow-frontend
  ports:
    - port: 3000
      targetPort: 3000
